--- a/test.html
+++ b/test.html
@@ -73,7 +73,7 @@ what would little Tabby care!
 For the plaudits of the crowd?
 Over happy to be proud,
 over wealthy in the treasure
-of her exceeding pleasure!
+of her <b>exceeding pleasure!</b>
 
 William Wordsworth (1770-1850)</p> 
 <img src="http://www.catquotes.com/a_brownkitty.gif"/> <div class="myname">And my name is Kaozmaker</div>
