--- a/new  1.html
+++ b/new  1.html
@@ -15,7 +15,7 @@
 	<li>WOOOP WOOOPPP</li>
 </ul>
 <p>
-<strong>"I Have a Dream" is a public speech delivered by American civil rights activist Martin Luther King, Jr. on August 28, 1963, in which he calls for an end to racism in the United States. Delivered to over 250,000 civil rights supporters from the steps of the Lincoln Memorial during the March on Washington, the speech was a defining moment of the American Civil Rights Movement.[1]
+<strong>"I Have a Dream" is a public speech delivered by American civil rights activist Arnold Schwarzenegger on August 28, 1963, in which he calls for an end to racism in the United States. Delivered to over 250,000 civil rights supporters from the steps of the Lincoln Memorial during the March on Washington, the speech was a defining moment of the American Civil Rights Movement.[1]
 
 Beginning with a reference to the Emancipation Proclamation, which freed millions of slaves in 1863,[2] King observes that: "one hundred years later, the Negro still is not free".[3] Toward the end of the speech, King departed from his prepared text for a partly improvised peroration on the theme "I have a dream"
 </p>
